3/17/11 add strings for "Show Why" and "Hide Why" buttons
3/17/11 prep game popups for rewrite of "Not Balanced" popup
3/17/11 change request: only allow one equation with 4NH3 and 6H2O in Game level 3
3/17/11 use strategy pattern for choosing equations in GameFactory
3/17/11 change request: hide closed button and top bar in Game popups
3/17/11 discussed molecules in boxes and decided to stick with growing stacks top-down (BoxesNode.TOP_DOWN_STACKS=true)
# 0.00.17 (49639) Mar 9, 2011
3/9/11 feature request: show number of points earned in "Balanced" game popup
# 0.00.16 (49623) Mar 8, 2011
3/8/11 add reverse reactions for all reactions in level 3
3/8/11 add Developer menu items for visibility of close button and top bar in game popups
# 0.00.15 (49596) Mar 7, 2011
3/7/11 dev version with bar at top of Game popups, plus lots of internal refactors and cleanup
3/7/11 remove boolean flag from "Not Balanced" popup, pass in NONE to hide chart/scales
3/7/11 class for "molecules are hidden" label
3/7/11 combine molecules with similar horizontal layout into a varargs implementation
3/7/11 fix: keep stuff in the Game centered when window is resized, game reward was messing this up
3/7/11 cleanup game factory, change game problems from Equation[] to ArrayList<Equation>
3/7/11 make properties public final in IntroductionModel
3/7/11 delete accessors for currentEquation property in GameModel, use public access
3/7/11 rename GameResultNode to GamePopupNode, since that's what team members call it
3/7/11 rename concrete equations to indicate subtype, useful for reading equations list in game factory
3/7/11 delete Equation.isAllCoefficientsZero, this is not needed since it's included in isBalanced
3/7/11 change terminology in code from "balanced with lowest coefficients" to "balanced and simplified", to match model.txt and user interface
3/7/11 code doc
3/7/11 change "actual coefficient" to "user coefficient" in code, to match terminology in model.txt